k8s/dmarzi-whereami/whereami-gateway-but-later.yaml
kind: Gateway
apiVersion: networking.x-k8s.io/v1alpha1
metadata:
  name: external-http
  namespace: store
spec:
  gatewayClassName: gke-l7-gxlb-mc
  listeners:
  - protocol: HTTP
    port: 80
    routes:
      kind: HTTPRoute
      selector:
        matchLabels:
          gateway: external-http
---
kind: HTTPRoute
apiVersion: networking.x-k8s.io/v1alpha1
metadata:
  name: public-store-route
  namespace: store
  labels:
    gateway: external-http
spec:
  hostnames:
  - "store.example.com"
  rules:
  - forwardTo:
    - backendRef:
        group: net.gke.io
        kind: ServiceImport
        name: store
      port: 8080
  - matches:
    - path:
        type: Prefix
        value: /v1
    forwardTo:
    - backendRef:
        group: net.gke.io
        kind: ServiceImport
        name: store-v1 # app-web-01
      port: 8080
  - matches:
    - path:
        type: Prefix
        value: /v2
    forwardTo:
    - backendRef:
        group: net.gke.io
        kind: ServiceImport
        name: store-v2 # app-web-02
      port: 8080
